--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,27 @@
 spring.application.name=EarthquakeCheck
-server.port=8081
+server.port=8082
+
+# PostgreSQL Bağlantı Ayarları
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=cekicimater
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Ayarları
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Bağlantı Havuzu Ayarları
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+
+# Google Maps API
+google.api.key=AIzaSyBZiBmX_1WcyGVCNJHEsYQy5sm0ROht7qk
+
+# Multipart dosya yükleme yapılandırmaları
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
